--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,13 @@
         <i class="fas fa-angle-double-down"></i>
       </div>
     </nav>
+    <!-- Main content -->
+  <main>
+    <h1>Welcome to Tweeter</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <h2>Recent Tweets</h2>
+    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  </main>
     <header>
       <div>
         <img src="/images/profile-hex.png">
