--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -55,6 +56,30 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+      </section>
+      <section class="tweets-container">
+        <article class="tweet">
+          <header>
+            <div class="tweet-avatar">
+              <img src="https://via.placeholder.com/50" alt="User Avatar">
+            </div>
+            <div class="tweet-user-info">
+              <h3>Newton</h3>
+              <p>@SirIsaac</p>
+            </div>
+          </header>
+          <div class="tweet-content">
+            <p>If I have seen further it is by standing on the shoulders of giants</p>
+          </div>
+          <footer>
+            <span>10 days ago</span>
+            <div class="tweet-actions">
+              <i class="fas fa-flag"></i>
+              <i class="fas fa-retweet"></i>
+              <i class="fas fa-heart"></i>
+            </div>
+          </footer>
+        </article>
       </section>
       
     </main>
