making fix as per feedback

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet" />
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha384-jLKHWM+P0p0CkY1+0gXoJ15XlAX8Z9YSL2WWEzLz1MgP0H5ywK6y4IQJfM" crossorigin="anonymous" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- timeago.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"></script>
 
@@ -36,12 +35,13 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
-      <div class="new-tweet">
-        Write a new tweet
-        <i class="fas fa-angle-double-down"></i>
+      <span>TWEETER</span>
+      <div class="nav-action">
+        <span>Write a new tweet</span>
+        <i class="fa-solid fa-angle-double-down"></i>
       </div>
     </nav>
+    
 
     <!-- Header -->
     <header>
